--- a/dankpapes.html
+++ b/dankpapes.html
@@ -171,7 +171,7 @@ limitations under the License.
                     <ul class="mdl-mega-footer--link-list">
                         <li>
                             <a target="_blank" href="https://developer.android.com/legal.html">
-                                <IMG SRC="https://lh3.googleusercontent.com/skEfl6Y3csFm3wV9fbtcOz4EFa3ljTiM_7VZsl18WmI0kBZNsBZdaTQ2CJRKEf-g4wUM4lAGYw=s328-no" class="drawer-icon-margin" ALT="" WIDTH=24 HEIGHT=24> <strong class="mdl-color-text--grey-500">Android is a trademark of Google Inc.</strong></a>
+                                <IMG SRC="https://lh3.googleusercontent.com/skEfl6Y3csFm3wV9fbtcOz4EFa3ljTiM_7VZsl18WmI0kBZNsBZdaTQ2CJRKEf-g4wUM4lAGYw=s328-no" class="drawer-icon-margin" ALT="" WIDTH=24 HEIGHT=24> <strong class="mdl-color-text--grey-500"><li>Android is a trademark of Google Inc.</li></strong></a>
                         </li>
                     </ul>
                 </div>
