--- a/pasta.html
+++ b/pasta.html
@@ -168,13 +168,13 @@
                             <div class="mdl-card__supporting-text mdl-color-text--grey-900">
                                 <h5>Preview</h5>
                                 <p></p>
-                                <img src="images/AppScreen.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
-                                <img src="images/AppScreen2.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
-                                <img src="images/AppScreen3.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
+                                <img src="images/AppScreen.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
+                                <img src="images/AppScreen2.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
+                                <img src="images/AppScreen3.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
 
-                                <img src="images/AppScreen.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px">
-                                <img src="images/AppScreen2.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px">
-                                <img src="images/AppScreen3.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px">
+                                <img src="images/AppScreen.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px">
+                                <img src="images/AppScreen2.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px">
+                                <img src="images/AppScreen3.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px">
                                 <p></p>
                                 <h5>Functions</h5>
                                 <ul>
@@ -246,7 +246,7 @@
                     <ul class="mdl-mega-footer--link-list">
                         <li>
                             <a target="_blank" href="https://developer.android.com/legal.html">
-                                <IMG SRC="https://lh3.googleusercontent.com/skEfl6Y3csFm3wV9fbtcOz4EFa3ljTiM_7VZsl18WmI0kBZNsBZdaTQ2CJRKEf-g4wUM4lAGYw=s328-no" class="drawer-icon-margin" ALT="" WIDTH=24 HEIGHT=24> <strong class="mdl-color-text--grey-500">Android is a trademark of Google Inc.</strong></a>
+                                <IMG SRC="https://lh3.googleusercontent.com/skEfl6Y3csFm3wV9fbtcOz4EFa3ljTiM_7VZsl18WmI0kBZNsBZdaTQ2CJRKEf-g4wUM4lAGYw=s328-no" class="drawer-icon-margin" ALT="" WIDTH=24 HEIGHT=24> <strong class="mdl-color-text--grey-500"><li>Android is a trademark of Google Inc.</li></strong></a>
                         </li>
                     </ul>
                 </div>
