--- a/pasta.html
+++ b/pasta.html
@@ -162,7 +162,7 @@
                             <div class="mdl-card__title">
                                 <img src="images/ic_pasta.png" alt="Pasta App" style="width:auto;height:auto;max-width: 200px;max-height: 200px;">
                                 <h4>Pasta
-                                    <p>The App is almost finished, a Beta is already available: ver. 0.9.2</p>
+                                    <p>Version 1.0.0</p>
                                 </h4>
                             </div>
                             <div class="mdl-card__supporting-text mdl-color-text--grey-900">
