--- a/pasta.html
+++ b/pasta.html
@@ -172,9 +172,9 @@
                                 <img src="images/AppScreen2.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
                                 <img src="images/AppScreen3.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
 
-                                <img src="images/AppScreen.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px">
-                                <img src="images/AppScreen2.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px">
-                                <img src="images/AppScreen3.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px">
+                                <p><img src="images/AppScreen.png" align="left" class="mdl-layout--small-screen-only" alt="Pasta App" style="background-size:cover; width: 100%; height: auto;"></p>
+                                <p><img src="images/AppScreen2.png" align="left" class="mdl-layout--small-screen-only" alt="Pasta App" style="background-size:cover; width: 100%; height: auto;"></p>
+                                <p><img src="images/AppScreen3.png" align="left" class="mdl-layout--small-screen-only" alt="Pasta App" style="background-size:cover; width: 100%; height: auto;"></p>
                                 <p></p>
                                 <h5>Functions</h5>
                                 <ul>
