--- a/wan.html
+++ b/wan.html
@@ -126,9 +126,9 @@ limitations under the License.
                                 <img src="images/AppScreen_WaN2.png" class="mdl-layout--large-screen-only" alt="WaN App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
                                 <img src="images/AppScreen_WaN3.png" class="mdl-layout--large-screen-only" alt="WaN App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
 
-                                <img src="images/AppScreen_WaN1.png" class="mdl-layout--small-screen-only" alt="WaN App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px">
-                                <img src="images/AppScreen_WaN2.png" class="mdl-layout--small-screen-only" alt="WaN App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px">
-                                <img src="images/AppScreen_WaN3.png" class="mdl-layout--small-screen-only" alt="WaN App" style="background-size:cover; max-width: 400px;max-height: 400px; margin-right:-120px">
+                                <img src="images/AppScreen_WaN1.png" align="left" class="mdl-layout--small-screen-only" alt="WaN App" style="background-size:cover; width: 100%; height: auto;">
+                                <img src="images/AppScreen_WaN2.png" align="left" class="mdl-layout--small-screen-only" alt="WaN App" style="background-size:cover; width: 100%; height: auto;">
+                                <img src="images/AppScreen_WaN3.png" align="left" class="mdl-layout--small-screen-only" alt="WaN App" style="background-size:cover; width: 100%; height: auto;">
                                 <p></p>
                             <h5>Functions</h5>
                             <ul>
