--- a/dankpapes.html
+++ b/dankpapes.html
@@ -19,6 +19,16 @@ limitations under the License.
 
 <head>
 
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107485642-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments)};
+    gtag('js', new Date());
+
+    gtag('config', 'UA-107485642-1');
+    </script>
+
     <meta charset="utf-8">
     <meta name="theme-color" content="#EEEEEE">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
