--- a/opencritic.html
+++ b/opencritic.html
@@ -17,6 +17,17 @@ limitations under the License.
 <!doctype html>
 <html lang="en">
   <head>
+
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107485642-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments)};
+    gtag('js', new Date());
+
+    gtag('config', 'UA-107485642-1');
+    </script>
+
     <meta charset="utf-8">
     <meta name="theme-color" content="#EA9B9E">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
