--- a/pasta.html
+++ b/pasta.html
@@ -15,6 +15,17 @@
 <html lang="en">
 
 <head>
+
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107485642-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments)};
+    gtag('js', new Date());
+
+    gtag('config', 'UA-107485642-1');
+    </script>
+
     <meta charset="utf-8">
     <meta name="theme-color" content="#9669D6">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
