--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@ limitations under the License.
                             <h2 class="mdl-card__title-text mdl-color-text--grey-900">Android Apps - Freetime Projects</h2>
                         </div>
                         <div class="mdl-card__supporting-text mdl-color-text--grey-800">
+                            PLEASE VISIT BALDEAU.GITHUB.IO! This site is deprecated!!
                             Take a look at some of the projects I have done in my freetime!
                             <p></p>
                             <h5>Newest project</h5>
